# 3d_geometry

./: README.md
Isotropic Remeshing final project/: CMakeLists.txt  README.md  main.cpp
Isotropic Remeshing final project/data/: lilium_s.off  result.off
coursework 1/: README.md  solution.ipynb
coursework 1/.ipynb_checkpoints/: solution-checkpoint.ipynb
coursework 2/: readMe.txt  solution.ipynb
coursework 2/.ipynb_checkpoints/: solution-checkpoint.ipynb
